# flect

./: .coverage  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_CN.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.github/: dependabot.yml
.github/actions/setup-npm/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: CI.yaml  lint.yaml  release.yaml  test.yaml
demo/: app.py
docs/: .gitignore  Dockerfile  README.md  app.py  fly.toml  main.py  pyproject.toml  requirements.txt  routes.py  vercel.json
docs/app/: layout.py  page.py
docs/app/docs/: layout.py  page.py
docs/app/docs/components/: page.py
docs/app/docs/components/_ctype/: page.py
docs/components/: site_header.py
docs/docs-ui/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/docs-ui/src/: App.tsx  component-resolver.tsx  main.tsx
docs/docs-ui/src/components/: badge.tsx  code-block-lazy.tsx  code-block.tsx  markdown-lazy.tsx  markdown.tsx
docs/docs_src/: main.py
docs/docs_src/app/: page.py
docs/docs_src/app/docs/components/_ctype/: page.py
docs/layouts/: docs_layout.py  root_layout.py
docs/pages/: components.py  docs.py  landing.py
docs/src/document/: main.py
docs/src/document/app/: layout.py  page.py
docs/src/document/app/docs/: layout.py  page.py
docs/src/document/app/docs/components/_ctype/: page.py
docs/src/documentation/: __init__.py  components.py  config.py  main.py  utils.py
docs/src/documentation/app/: layout.py  page.py
docs/src/documentation/app/docs/: layout.py
docs/src/documentation/app/docs/components/_component_type/: page.py
docs/src/documentation/app/docs/components/_ctype/: page.py
docs/src/documentation/app/docs/components/form/: route.py
docs/src/documentation/app/group__docs/: component.py  layout.py
docs/src/documentation/app/group__docs/actions/dynamic__action_type/: page.py
docs/src/documentation/app/group__docs/components/data_grid/: route.py
docs/src/documentation/app/group__docs/components/deferred_fetch/: route.py
docs/src/documentation/app/group__docs/components/dynamic__component_type/: page.py
docs/src/documentation/app/group__docs/components/form/: route.py
docs/src/documentation/app/group__docs/docs/: page.py
docs/src/documentation/app/group__docs/docs/dynamic__content_name/: page.py
docs/src/documentation/app/group__docs/docs/installation/: page.py
docs/src/documentation/app/group__docs/docs/introduction/: page.py
docs/src/documentation/app/group__docs/learn/dynamic__content_name/: page.py
docs/src/documentation/content/: custom-component.md  form.md  installation.md  introduction.md  project-structure.md  routing.md  sitemap.md  tailwindcss.md  tutorial.md
docs_bak/: app.py
examples/todo/: .gitignore  Makefile  README.md  pyproject.toml
examples/todo/src/todo/: __init__.py  main.py  storage.py
examples/todo/src/todo/app/: layout.py  page.py  route.py
src/npm-flect/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710642126157-cdb28cb61056a.mjs  vite.config.ts.timestamp-1711543857706-78e5f487ee83b.mjs
src/npm-flect-prebuilt/: components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/npm-flect-prebuilt/src/: App.tsx
src/npm-flect-prebuilt/src/components/: code-block-lazy.tsx
src/npm-flect/src/: application.tsx  globals.css  index.ts  main.tsx  resolver.tsx  routing.tsx  types.d.ts
src/npm-flect/src/components/: action-resolver.tsx  component-resolver.tsx  index.ts  routing.tsx
src/npm-flect/src/components/flect/: any-component.tsx  avatar.tsx  button.tsx  code-block-lazy.tsx  code-block.tsx  container.tsx  copy-button.tsx  custom.tsx  data-grid.tsx  deferred-fetch.tsx  dialog.tsx  display.tsx  form-lazy.tsx  form.tsx  heading.tsx  link.tsx  link.types.ts  markdown-lazy.tsx  markdown.tsx  nav-link.tsx  outlet.tsx  paragraph.tsx  table.tsx  text.tsx
src/npm-flect/src/contexts/: action-resolver.tsx  component-resolver.tsx  config.tsx
src/npm-flect/src/hooks/: use-action.ts  use-dispatch-action-listen.ts  use-hot-reload.ts
src/npm-flect/src/lib/: action.ts  actions.ts  ajv-resolver.ts  utils.ts
src/npm-tui/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/npm-tui/src/: App.tsx  application.tsx  globals.css  main.tsx  router.tsx  routing.tsx  tui.tsx  types.d.ts
src/npm-tui/src/components/: any-component.tsx
src/npm-tui/src/lib/: action.ts
src/python-flect/src/flect/: __init__.py  actions.py  application.py  components.py  config.py  constants.py  display.py  form.py  head.py  render.py  response.py  routing.py  sitemap.py  types.py  utils.py  version.py
src/python-flect/tests/: conftest.py  test_head.py  test_render.py  test_routing.py  test_sitemap.py  test_utils.py
src/python-flect/tests/app/: page.py  utils.py
src/python-flect/tests/test_routing/: test_client.py  test_server.py  test_sort.py
src/python-tui/: README.md  pyproject.toml
src/python-tui/src/cookiecutter-tui/: cookiecutter.json
src/python-tui/src/cookiecutter-tui/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
src/python-tui/src/cookiecutter-tui/{{cookiecutter.project_slug}}/src/: main.py
src/python-tui/src/cookiecutter-tui/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
src/python-tui/src/cookiecutter-tui/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/app/: layout.py  page.py
src/python-tui/src/static/: index.html
src/python-tui/src/static/assets/: index.css  index.js
src/python-tui/src/tui/: __init__.py  actions.py  application.py  components.py  form.py  init.py  layout.py  meta.py  prebuild.py  render.py  response.py  route.py  router.py  routing.py  sitemap.py  version.py
src/python-tui/tests/: conftest.py  test_render.py  test_route.py  test_router.py  test_routing.py  test_sitemap.py
(+36 files in other folders)
