[project]
name = "tuilib"
description = "Default template for PDM package"
authors = [
    {name = "Chaoying", email = "chaunceywe@gmail.com"},
]
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "httpx>=0.26.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.version]
source = "file"
path = "src/tui/__init__.py"

[tool.pdm.build]
includes = ["src/tui", "src/static"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.12",
    "pyright>=1.1.347",
    "coverage>=7.4.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.4",
]
