[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "tuiframework",
]
readme = "README.md"
requires-python = ">= {{cookiecutter.python_version}}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]
