[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
authors = []
dependencies = [
    "tuiframework",
]
readme = "README.md"
requires-python = ">= {{cookiecutter.python_version}}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]
